--- a/src/JoyOI.Monitor/Views/Shared/_Chart.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Chart.cshtml
@@ -17,7 +17,7 @@
         <option value="3600,60">一小时</option>
         <option value="21600,12">6小时</option>
         <option value="43200,12">12小时</option>
-        <option value="86400,24">一天</option>
+        <option value="86400,24" selected="selected">一天</option>
         <option value="604800,7">一周</option>
         <option value="2592000,30">30天</option>
     </select>
