--- a/src/JoyOI.Monitor/Views/Shared/_Chart.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Chart.cshtml
@@ -34,7 +34,8 @@
         let start = end - range;
         let interval = Math.floor(range / points);
         $.get(
-            "@url?start=" + start + "&end=" + end + "&interval=" + interval + "&timezoneoffset=" + now.getTimezoneOffset(),
+            "@url?start=" + start + "&end=" + end + "&interval=" + interval +
+            "&timezoneoffset=" + now.getTimezoneOffset(),
             function (data) {
                 if (@chart_instance == null) {
                     var ctx = document.getElementById("@canvas_id").getContext('2d');
