--- a/src/JoyOI.Monitor/Views/Shared/_Layout.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Layout.cshtml
@@ -12,8 +12,7 @@
     <script src="~/scripts/joyoi.base.min.js"></script>
     <script src="~/signalr/js"></script>
     <script src="~/scripts/joyoi.extend.js"></script>
-    <script src="~/scripts/external/jquery-3.2.1.min.js"></script>
-    <script src="~/scripts/external/Chart.bundle.min.js"></script>
+    <script src="~/scripts/Chart.bundle.min.js"></script>
 </head>
 <body class="home-template fixed-navbar">
     <!-- start header -->
