--- a/src/JoyOI.Monitor/Views/Shared/_Chart.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Chart.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ChartMeta
 
-@{ 
+@{
     var id = Model.Id;
     var url = Model.Url;
     var canvas_id = id + "_canvas";
@@ -9,7 +9,7 @@
     var chart_instance = "chart_" + id;
 }
 
-<div>
+<div class="cont-body">
     <select class="pull-right" id="@time_range_id" onchange="@load_chart_func_name ()">
         <option value="60,60">一分钟</option>
         <option value="300,60">五分钟</option>
