new thread chart view controller

--- a/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
@@ -45,7 +45,7 @@
             <span>论坛</span>
             <i class="fa fa-angle-down sidebar-uplevel"></i>
         </a>
-        <a class="sidebar-section-button nested" href="/Forum/Thread">
+        <a class="sidebar-section-button nested" href="/Forum/NewThread">
             <span>发表主题</span>
         </a>
         <a class="sidebar-section-button nested" href="/Forum/Reply">
