new reply view controller

--- a/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
@@ -48,7 +48,7 @@
         <a class="sidebar-section-button nested" href="/Forum/NewThread">
             <span>发表主题</span>
         </a>
-        <a class="sidebar-section-button nested" href="/Forum/Reply">
+        <a class="sidebar-section-button nested" href="/Forum/NewReply">
             <span>回复统计</span>
         </a>
         <a class="sidebar-section-button active-uplevel" href="#">
