--- a/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
@@ -56,7 +56,7 @@
             <span>个人空间</span>
             <i class="fa fa-angle-down sidebar-uplevel"></i>
         </a>
-        <a class="sidebar-section-button nested" href="/Blog/Article">
+        <a class="sidebar-section-button nested" href="/Blog/NewArticle">
             <span>文章统计</span>
         </a>
     </div>
