contest attende chart

--- a/src/JoyOI.Monitor/Views/Contests/Index.cshtml
+++ b/src/JoyOI.Monitor/Views/Contests/Index.cshtml
@@ -20,6 +20,12 @@
               Id = "ongoing_contest",
               Url = "/OnlineJudge/Contest/Ongoing"
           })
+
+          @Html.Partial("_Chart", new ChartMeta
+          {
+              Id = "contest_attende",
+              Url = "/OnlineJudge/Contest/Attende"
+          })
         </div>
     </div>
 </div>
