--- a/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
@@ -20,9 +20,6 @@
             <span>用户中心统计</span>
             <i class="fa fa-angle-down sidebar-uplevel"></i>
         </a>
-        <a class="sidebar-section-button nested" href="/UserCenter/UserActive">
-            <span>用户活动统计</span>
-        </a>
         <a class="sidebar-section-button nested" href="/UserCenter/UserRegister">
             <span>用户注册统计</span>
         </a>
@@ -30,6 +27,9 @@
             <i class="fa fa-chain"></i>
             <span>Online Judge</span>
             <i class="fa fa-angle-down sidebar-uplevel"></i>
+        </a>
+        <a class="sidebar-section-button nested" href="/Activity/Page?db=joyoi_oj">
+            <span>活跃用户</span>
         </a>
         <a class="sidebar-section-button nested" href="/OnlineJudge/Judge">
             <span>评测记录统计</span>
@@ -44,6 +44,9 @@
             <i class="fa fa-chain"></i>
             <span>论坛</span>
             <i class="fa fa-angle-down sidebar-uplevel"></i>
+        </a>
+        <a class="sidebar-section-button nested" href="/Activity/Page?db=joyoi_forum">
+            <span>活跃用户</span>
         </a>
         <a class="sidebar-section-button nested" href="/Forum/NewThread">
             <span>发表主题</span>
