new group chart

--- a/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
@@ -40,6 +40,9 @@
         <a class="sidebar-section-button nested" href="/OnlineJudge/Contest">
             <span>比赛统计</span>
         </a>
+        <a class="sidebar-section-button nested" href="/OnlineJudge/Groups">
+            <span>新团队创建</span>
+        </a>
         <a class="sidebar-section-button active-uplevel" href="#">
             <i class="fa fa-chain"></i>
             <span>论坛</span>
