change group chart title

--- a/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
@@ -41,7 +41,7 @@
             <span>比赛统计</span>
         </a>
         <a class="sidebar-section-button nested" href="/OnlineJudge/Groups">
-            <span>新团队创建</span>
+            <span>团队创建统计</span>
         </a>
         <a data-group="forum" data-switch="off" class="sidebar-section-button active-uplevel" href="#">
 
