--- a/src/JoyOI.Monitor/Views/Home/Index.cshtml
+++ b/src/JoyOI.Monitor/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{ 
-    ViewBag.Title = "仪表盘";
+    ViewBag.Title = "首页";
+    ViewBag.Current = "home";
 }
 
 @section Navigator {
@@ -16,7 +17,7 @@
         @Html.Partial("_Sidebar")
         <div class="grid_9">
             <div class="cont-body">
-                blablabla
+                欢迎您使用Joy OI监控中心
             </div>
         </div>
     </div>
