Modify mgmt svc name

--- a/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
@@ -6,7 +6,7 @@
         </a>
         <a data-group="mgmt" data-switch="off" class="sidebar-section-button active-uplevel" href="#">
             <i class="fa fa-chain"></i>
-            <span>Mgmt Svc</span>
+            <span>Management Service</span>
             <i class="fa fa-angle-down sidebar-uplevel"></i>
         </a>
         <a data-group="mgmt" class="sidebar-section-button nested @(ViewBag.Current == "mgmt-statemachine" ? "active" : "")" href="/ManagementService/StateMachine">
