--- a/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
+++ b/src/JoyOI.Monitor/Views/Shared/_Sidebar.cshtml
@@ -4,7 +4,7 @@
             <i class="fa fa-dashboard"></i>
             <span>首页</span>
         </a>
-        <a data-group="mgmt" data-switch="off" class="sidebar-section-button active-uplevel" href="#">
+        <a data-group="mgmt" data-switch="off" class="sidebar-section-button active-uplevel" href="javascript:;">
             <i class="fa fa-chain"></i>
             <span>Management Service</span>
             <i class="fa fa-angle-down sidebar-uplevel"></i>
@@ -15,7 +15,7 @@
         <a data-group="mgmt" class="sidebar-section-button nested @(ViewBag.Current == "mgmt-blob" ? "active" : "")" href="/ManagementService/Blob">
             <span>Blob统计</span>
         </a>
-        <a data-group="uc" data-switch="off" class="sidebar-section-button active-uplevel" href="#">
+        <a data-group="uc" data-switch="off" class="sidebar-section-button active-uplevel" href="javascript:;">
             <i class="fa fa-chain"></i>
             <span>用户中心</span>
             <i class="fa fa-angle-down sidebar-uplevel"></i>
@@ -23,7 +23,7 @@
         <a data-group="uc" class="sidebar-section-button nested @(ViewBag.Current == "uc-register" ? "active" : "")" href="/UserCenter/UserRegister">
             <span>用户注册统计</span>
         </a>
-        <a class="sidebar-section-button active-uplevel" data-group="oj" data-switch="off" href="#">
+        <a class="sidebar-section-button active-uplevel" data-group="oj" data-switch="off" href="javascript:;">
             <i class="fa fa-chain"></i>
             <span>Online Judge</span>
             <i class="fa fa-angle-down sidebar-uplevel"></i>
@@ -43,7 +43,7 @@
         <a data-group="oj" class="sidebar-section-button nested @(ViewBag.Current == "oj-groups" ? "active" : "")" href="/OnlineJudge/Groups">
             <span>团队创建统计</span>
         </a>
-        <a data-group="forum" data-switch="off" class="sidebar-section-button active-uplevel" href="#">
+        <a data-group="forum" data-switch="off" class="sidebar-section-button active-uplevel" href="javascript:;">
 
             <i class="fa fa-chain"></i>
             <span>论坛</span>
@@ -58,7 +58,7 @@
         <a data-group="forum" class="sidebar-section-button nested @(ViewBag.Current == "forum-reply" ? "active" : "")" href="/Forum/NewReply">
             <span>回复统计</span>
         </a>
-        <a data-group="blog" data-switch="off" class="sidebar-section-button active-uplevel" href="#">
+        <a data-group="blog" data-switch="off" class="sidebar-section-button active-uplevel" href="javascript:;">
             <i class="fa fa-chain"></i>
             <span>个人空间</span>
             <i class="fa fa-angle-down sidebar-uplevel"></i>
